fix conflict, add info api